2007-09-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/DummyConnector.h: added
	useful new class for testing Portable datatypes; patch number
	1798250 from Freyr Magnusson

	* conf/CMakeLists.txt: copy more configuration files to the
	"binary" directory, so that it becomes more independent.
	This is so users of YARP can just set the YARP_DIR directory
	and do not need to point to the full source with YARP_ROOT.
	YARP_DIR is understood automatically by CMake, wherease YARP_ROOT
	is not.

2007-09-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarphear.cpp: yarphear can now save audio from
	the network to a file, without also requiring access to the
	speakers (use --nodevice option)

2007-09-21  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/nvidia/NVIDIADeviceDriver.cpp/.h: Added the capability to process 2 images at the same time. A possible application for this feature is, ie, motion detection (throught subtraction of subsequent frames)
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h: same as above
	* example/nvidia/progs/: added a new example program, FP-motion.


2007-09-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: checked for case
	of no axes available.

	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h: added
	an IAxisInfo interface as a standard way to get the name of an axis.

	* src/libYARP_dev/src/RemoteControlBoard.cpp: added remote route
	for IAxisInfo interface.


2007-08-14  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/nvidia/NVIDIADeviceDriver.cpp/.h: Added the capability of 
	setting non-vector arguments in an easier way
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h: same as above
	* example/nvidia/progs/: added a new example program, FP-resize.


2007-08-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/ShmemCarrier.h: disabled old
	shmem class, since it interferes with compiles on certain