@@ -46,12 +46,14 @@ public:
     virtual bool read(ConnectionReader& connection) {
         // An exception will get thrown upon error.
         // Pending: translate this in expectBlock to a return value.
+        connection.convertTextMode(); // if connection is text-mode, convert!
         connection.expectBlock((char*)(&t),sizeof(T));
         return true;
     }
 
     virtual bool write(ConnectionWriter& connection) {
         connection.appendBlock((char*)(&t),sizeof(T));
+        connection.convertTextMode(); // if connection is text-mode, convert!
         return true;
     }
 };
