@@ -25,6 +25,7 @@ static inline void CopyPixel(const T1 *src, T2 *dest)
 
 typedef PixelMono Def_VOCAB_PIXEL_MONO;
 typedef PixelRgb Def_VOCAB_PIXEL_RGB;
+typedef PixelRgba Def_VOCAB_PIXEL_RGBA;
 typedef PixelHsv Def_VOCAB_PIXEL_HSV;
 typedef PixelBgr Def_VOCAB_PIXEL_BGR;
 typedef PixelMonoSigned Def_VOCAB_PIXEL_MONO_SIGNED;
@@ -45,6 +46,9 @@ SPECIAL_COPY_BEGIN
 
 SPECIAL_COPY(VOCAB_PIXEL_MONO,VOCAB_PIXEL_RGB)
     dest->r = dest->g = dest->b = *src;
+SPECIAL_COPY(VOCAB_PIXEL_MONO,VOCAB_PIXEL_RGBA)
+    dest->r = dest->g = dest->b = *src; 
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_MONO,VOCAB_PIXEL_BGR)
     dest->r = dest->g = dest->b = *src;
 SPECIAL_COPY(VOCAB_PIXEL_MONO,VOCAB_PIXEL_HSV)
@@ -74,6 +78,9 @@ SPECIAL_COPY(VOCAB_PIXEL_RGB,VOCAB_PIXEL_MONO_SIGNED)
     *dest = (char)((src->r + src->g + src->b)/3);
 SPECIAL_COPY(VOCAB_PIXEL_RGB,VOCAB_PIXEL_RGB_SIGNED)
     dest->r = src->r; dest->g = src->g; dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGB,VOCAB_PIXEL_RGBA)
+    dest->r = src->r; dest->g = src->g; dest->b = src->b;
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_RGB,VOCAB_PIXEL_MONO_FLOAT)
     *dest = ((src->r + src->g + src->b)/3.0f);
 SPECIAL_COPY(VOCAB_PIXEL_RGB,VOCAB_PIXEL_RGB_FLOAT)
@@ -91,6 +98,8 @@ SPECIAL_COPY(VOCAB_PIXEL_RGB,VOCAB_PIXEL_HSV_FLOAT)
 SPECIAL_COPY(VOCAB_PIXEL_HSV,VOCAB_PIXEL_MONO)
     ACE_ASSERT(implemented_yet == 0);
 SPECIAL_COPY(VOCAB_PIXEL_HSV,VOCAB_PIXEL_RGB)
+    ACE_ASSERT(implemented_yet == 0);
+SPECIAL_COPY(VOCAB_PIXEL_HSV,VOCAB_PIXEL_RGBA)
     ACE_ASSERT(implemented_yet == 0);
 SPECIAL_COPY(VOCAB_PIXEL_HSV,VOCAB_PIXEL_BGR)
     ACE_ASSERT(implemented_yet == 0);
@@ -128,12 +137,48 @@ SPECIAL_COPY(VOCAB_PIXEL_BGR,VOCAB_PIXEL_RGB)
     dest->r = src->r;
 dest->g = src->g;
 dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_BGR,VOCAB_PIXEL_RGBA)
+    dest->r = src->r;
+dest->g = src->g;
+dest->b = src->b;
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_BGR,VOCAB_PIXEL_HSV_FLOAT)
+    ACE_ASSERT(implemented_yet == 0);
+
+
+
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_MONO)
+    *dest = (unsigned char)((src->r + src->g + src->b)/3);
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_INT)
+    *dest = (unsigned char)((src->r + src->g + src->b)/3);
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_HSV)
+    ACE_ASSERT(implemented_yet == 0);
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_MONO_SIGNED)
+    *dest = (char)((src->r + src->g + src->b)/3);
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_RGB_SIGNED)
+    dest->r = src->r; dest->g = src->g; dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_MONO_FLOAT)
+    *dest = ((src->r + src->g + src->b)/3.0f);
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_RGB_FLOAT)
+    dest->r = src->r;
+dest->g = src->g;
+dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_RGB)
+    dest->r = src->r;
+dest->g = src->g;
+dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_BGR)
+    dest->r = src->r;
+dest->g = src->g;
+dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_HSV_FLOAT)
     ACE_ASSERT(implemented_yet == 0);
 
 
 SPECIAL_COPY(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_RGB)
     dest->r = dest->g = dest->b = *src;
+SPECIAL_COPY(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_RGBA)
+    dest->r = dest->g = dest->b = *src; dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_BGR)
     dest->r = dest->g = dest->b = *src;
 SPECIAL_COPY(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_HSV)
@@ -163,6 +208,11 @@ SPECIAL_COPY(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_RGB)
     dest->r = src->r;
 dest->g = src->g;
 dest->b = src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_RGBA)
+    dest->r = src->r;
+dest->g = src->g;
+dest->b = src->b;
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_BGR)
     dest->r = src->r;
 dest->g = src->g;
@@ -184,6 +234,9 @@ SPECIAL_COPY(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_MONO_SIGNED)
     *dest = (char)*src;
 SPECIAL_COPY(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_RGB)
     dest->r = dest->g = dest->b = (unsigned char)(*src);
+SPECIAL_COPY(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_RGBA)
+    dest->r = dest->g = dest->b = (unsigned char)(*src);
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_BGR)
     dest->r = dest->g = dest->b = (unsigned char)(*src);
 SPECIAL_COPY(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_HSV)
@@ -209,6 +262,11 @@ SPECIAL_COPY(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_RGB)
     dest->r = (unsigned char) src->r;
 dest->g = (unsigned char) src->g;
 dest->b = (unsigned char) src->b;
+SPECIAL_COPY(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_RGBA)
+    dest->r = (unsigned char) src->r;
+dest->g = (unsigned char) src->g;
+dest->b = (unsigned char) src->b;
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_BGR)
     dest->r = (unsigned char) src->r;
 dest->g = (unsigned char) src->g;
@@ -228,6 +286,8 @@ SPECIAL_COPY(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_RGB)
     ACE_ASSERT(implemented_yet == 0);
 SPECIAL_COPY(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_BGR)
     ACE_ASSERT(implemented_yet == 0);
+SPECIAL_COPY(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_RGBA)
+    ACE_ASSERT(implemented_yet == 0);
 SPECIAL_COPY(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_MONO_SIGNED)
     ACE_ASSERT(implemented_yet == 0);
 SPECIAL_COPY(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_RGB_SIGNED)
@@ -243,6 +303,9 @@ SPECIAL_COPY(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_INT)
 
 SPECIAL_COPY(VOCAB_PIXEL_INT,VOCAB_PIXEL_RGB)
     dest->r = dest->g = dest->b = (char)*src;
+SPECIAL_COPY(VOCAB_PIXEL_INT,VOCAB_PIXEL_RGBA)
+    dest->r = dest->g = dest->b = (char)*src;
+dest->a = 255;
 SPECIAL_COPY(VOCAB_PIXEL_INT,VOCAB_PIXEL_BGR)
     dest->r = dest->g = dest->b = (char)*src;
 SPECIAL_COPY(VOCAB_PIXEL_INT,VOCAB_PIXEL_HSV)
@@ -320,6 +383,7 @@ void Image::copyPixels(const unsigned char *src, int id1,
 
             MAKE_CASE(VOCAB_PIXEL_MONO,VOCAB_PIXEL_MONO);
             MAKE_2CASE(VOCAB_PIXEL_MONO,VOCAB_PIXEL_RGB);
+            MAKE_2CASE(VOCAB_PIXEL_MONO,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_MONO,VOCAB_PIXEL_HSV);
             MAKE_2CASE(VOCAB_PIXEL_MONO,VOCAB_PIXEL_BGR);
             MAKE_2CASE(VOCAB_PIXEL_MONO,VOCAB_PIXEL_MONO_SIGNED);
@@ -332,6 +396,7 @@ void Image::copyPixels(const unsigned char *src, int id1,
             MAKE_CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_RGB);
             MAKE_2CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_HSV);
             MAKE_2CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_BGR);
+            MAKE_2CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_MONO_SIGNED);
             MAKE_2CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_RGB_SIGNED);
             MAKE_2CASE(VOCAB_PIXEL_RGB,VOCAB_PIXEL_MONO_FLOAT);
@@ -341,6 +406,7 @@ void Image::copyPixels(const unsigned char *src, int id1,
 
             MAKE_CASE(VOCAB_PIXEL_HSV,VOCAB_PIXEL_HSV);
             MAKE_2CASE(VOCAB_PIXEL_HSV,VOCAB_PIXEL_BGR);
+            MAKE_2CASE(VOCAB_PIXEL_HSV,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_HSV,VOCAB_PIXEL_MONO_SIGNED);
             MAKE_2CASE(VOCAB_PIXEL_HSV,VOCAB_PIXEL_RGB_SIGNED);
             MAKE_2CASE(VOCAB_PIXEL_HSV,VOCAB_PIXEL_MONO_FLOAT);
@@ -350,6 +416,7 @@ void Image::copyPixels(const unsigned char *src, int id1,
 
             MAKE_CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_BGR);
             MAKE_2CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_MONO_SIGNED);
+            MAKE_2CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_RGB_SIGNED);
             MAKE_2CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_MONO_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_RGB_FLOAT);
@@ -357,6 +424,7 @@ void Image::copyPixels(const unsigned char *src, int id1,
             MAKE_2CASE(VOCAB_PIXEL_BGR,VOCAB_PIXEL_INT);
 
             MAKE_CASE(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_MONO_SIGNED);
+            MAKE_2CASE(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_RGB_SIGNED);
             MAKE_2CASE(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_MONO_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_MONO_SIGNED,VOCAB_PIXEL_RGB_FLOAT);
@@ -365,24 +433,32 @@ void Image::copyPixels(const unsigned char *src, int id1,
 
 
             MAKE_CASE(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_RGB_SIGNED);
+            MAKE_2CASE(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_MONO_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_RGB_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_HSV_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_RGB_SIGNED,VOCAB_PIXEL_INT);
 
             MAKE_CASE(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_MONO_FLOAT);
+            MAKE_2CASE(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_RGB_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_HSV_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_MONO_FLOAT,VOCAB_PIXEL_INT);
 
             MAKE_CASE(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_RGB_FLOAT);
+            MAKE_2CASE(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_HSV_FLOAT);
             MAKE_2CASE(VOCAB_PIXEL_RGB_FLOAT,VOCAB_PIXEL_INT);
 
             MAKE_CASE(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_HSV_FLOAT);
+            MAKE_2CASE(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_RGBA);
             MAKE_2CASE(VOCAB_PIXEL_HSV_FLOAT,VOCAB_PIXEL_INT);
 
             MAKE_CASE(VOCAB_PIXEL_INT,VOCAB_PIXEL_INT);
+            MAKE_2CASE(VOCAB_PIXEL_INT,VOCAB_PIXEL_RGBA);
+
+            MAKE_CASE(VOCAB_PIXEL_RGBA,VOCAB_PIXEL_RGBA);
+
 
         default:
             ACE_OS::printf("*** Tried to copy type %d to %d\n", id1, id2);
